# py-test-tt

./: README.md  pyproject.toml
src/py_test_tt/: __init__.py
tests/: test_2nd_1_card.py  test_2nd_2_fail.py
