[project]
name = "py-test-tt"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "tinydb==4.5.1",
    "rich==10.7.0",
    "typer==0.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_test_tt"]
